# art_api

./: .gitignore  alembic.ini  main.py  openapi.yaml  pyproject.toml  schemas.py
alembic/versions/: 002099120c11_adding_is_active_to_user_table.py  0b710037f6c9_.py  18700278b1e0_.py  1f303767fcb6_.py  20e2decdea0c_.py  311c5d7af064_.py  36026dd76dcd_add_cascade_delete_to_artwork_id_in_lot.py  5a07584345b9_.py  c00200345d92_.py  d60e46894493_.py  f7193414abed_.py
api/routes/: artworks.py  auctions.py  bids.py  lots.py  users.py
api/schemas/: users.py
api/utils/: artworks.py  auctions.py  bid.py  lots.py  users.py
app/: routes.py
app/api/: routes.py  schemas.py
app/db/: model.py  schema.py
db/: __init__.py  db_setup.py  model.py
db/models/: _mixins.py  _model_constants.py  artwork.py  auction.py  bid.py  lot.py  user.py
validation_schemas/: artworks.py  auctions.py  bids.py  lots.py  users.py
