[project]
name = "art-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.14.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.6",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.4",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]
